tests/errors/semantic/blocking/REMOVE_SET_KEYERROR_TYPE_1.py
# pylint: disable=missing-function-docstring, missing-module-docstring

se = {1, 2, 3}

se.remove(range(3,4))
